# Klovered-python

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  HANDOFF.md  README.md  docker-compose.prod.yml  docker-compose.stack.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: auth.py  config.py  cookies.py  db.py  deps.py  main.py  provisioning.py  storage.py  supabase_rest.py
app/pipeline/: agents.py  chunk.py  embeddings.py  ingest.py  jobs.py  llm.py  parse.py  rag.py  retrieval.py
app/routers/: auth.py  cron.py  documents.py  feedback.py  google_auth.py  jobs.py  knowledge.py  parse.py  probe.py
db/: schema.sql
scripts/: apply_schema.py  usage_report.sql
tests/: conftest.py  test_accounts.py  test_agents.py  test_auth.py  test_cookies.py  test_feedback.py  test_google_auth.py  test_health.py  test_integration.py  test_jobs.py  test_parse.py  test_rag.py  test_retrieval.py  test_supabase_rest.py  test_unit.py  test_whoami.py
