[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "klovered-python-backend"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "pyjwt[crypto]>=2.9",
    "bcrypt>=4.2",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "pymupdf>=1.24",
    "mammoth>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "respx>=0.21", "ruff>=0.6"]

[tool.setuptools]
packages = ["app", "app.routers", "app.pipeline"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
